# wall-e-bot

./: .gitignore  aiohttp-socks-0-8-4.nix  bot.py  flake.nix  main.py  matrix-nio-0-24-0.nix  pyproject.toml  python-cryptography-fernet-wrapper.nix  simplematrixbotlib.nix
app/: bot.py  bot_helper.py  main.py  spielerplus.py
